fix: render wrapped text

--- a/src/containers/FloatElement/FloatElement.module.css
+++ b/src/containers/FloatElement/FloatElement.module.css
@@ -18,7 +18,7 @@
 .float-element-mask {
   display: none;
   top: 0;
-  bottom: 0;
+  bottom: -30px;
   left: 0;
   right: 0;
 }
